--- a/index.html
+++ b/index.html
@@ -56,16 +56,39 @@
                 <div class="text">
                     <div class="text-left">
                         <div>
-                            <h3>The Design</h3>
+                            <h3>UPhone Lifestyle Lovers</h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi consequuntur hic perferendis sed sequi aspernatur deleniti illum, neque ipsum inventore.
                             </p>
                         </div>
                     </div>
+                    <div class="right">
+                        <div class="text-right">
+                            <div>
+                                <h3>The Design</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe iste iure eius, obcaecati sint facilis optio voluptatum vitae ut molestias!</p>
+                            </div>
+                        </div>
+                <div class="play-btn">
+                    <div></div>
                 </div>
             </div>
+         </div>
+         <div class="links">
+            <a href="#" class="main-link">
+                <span>Explore Now</span>
+            </a>
+            <a href="#">Credit</a>
+         </div>
+        </div>
+        <h1 class="background-text">
+            <span>
+                UPhone
+            </span> <br>
+                11 Store
+           </h1>
 
-        </main>
+</main>
 
     </header>
 </body>
