--- a/index.html
+++ b/index.html
@@ -87,9 +87,25 @@
             </span> <br>
                 11 Store
            </h1>
-
-</main>
-
+        </main>
     </header>
+
+
+   <section class="about">
+    <div class="container">
+        <div class="mains">
+            <img src="./7762553d-8dbb-4005-9d09-d3dc813f174a.png" alt="">
+        </div>
+        <div class="about-grid"></div>
+        <div class="about-info">
+            <h3 class="subheading">About</h3>
+            <h1 class="heading">About UPhone</h1>
+            <p class="texts" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quia doloremque earum omnis sit eligendi optio non alias autem?</p>
+            <div class="cta">
+                <a href="#" class="btn">ContactMe</a>
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
